--- a/tutorials/01 Basics.ipynb
+++ b/tutorials/01 Basics.ipynb
@@ -289,7 +289,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:flyingsquid]",
+   "display_name": "Python [conda env:flyingsquid] *",
    "language": "python",
    "name": "conda-env-flyingsquid-py"
   },
