Update images in tutorials

--- a/examples/tutorials/Basics.ipynb
+++ b/examples/tutorials/Basics.ipynb
@@ -9,7 +9,7 @@
     "In this notebook, we'll use some synthetic data to introduce you to FlyingSquid's API. In this notebook, we'll cover the three steps of the FlyingSquid pipeline using synthetic data:\n",
     "\n",
     "<div>\n",
-    "  <img src=\"https://raw.githubusercontent.com/HazyResearch/flyingsquid/master/figs/System%20Diagram.png?token=ABDDIITULJD5XW5WJJHLIIC6LWIUS\" style=\"padding: 20px 30px\">\n",
+    "  <img src=\"https://raw.githubusercontent.com/HazyResearch/flyingsquid/master/figs/System%20Diagram.png\" style=\"padding: 20px 30px\">\n",
     "</div>\n",
     "\n",
     "First, we'll generate some synthetic labeling function outputs. Next, we'll use FlyingSquid to model the accuracies of these labeling functions (without any ground truth data). Finally, we'll generate probabilistic training labels for downstream model training."
@@ -149,7 +149,7 @@
     "Next, we're going to use FlyingSquid to model the five labeling functions. We'll use this dependency graph:\n",
     "\n",
     "<div>\n",
-    "  <img src=\"https://raw.githubusercontent.com/HazyResearch/flyingsquid/master/figs/graphical_structure_simple.png?token=ABDDIIR25ZTTS5SWWAPBTW26LWLC4\" style=\"padding: 20px 30px\" width = '400px'>\n",
+    "  <img src=\"https://raw.githubusercontent.com/HazyResearch/flyingsquid/master/figs/graphical_structure_simple.png\" style=\"padding: 20px 30px\" width = '400px'>\n",
     "</div>\n",
     "\n",
     "As you can see, we have one (hidden) node for the latent ground truth variable Y, and five (observable) nodes for each labeling function.\n",
