--- a/examples/tutorials/Video.ipynb
+++ b/examples/tutorials/Video.ipynb
@@ -11,8 +11,8 @@
     "\n",
     "<table style=\"width:100%\">\n",
     "    <tr style=\"background:none\">\n",
-    "        <th><img src=\"https://raw.githubusercontent.com/HazyResearch/flyingsquid/master/figs/tennis_rally.png?token=ABDDIIUQJTDIBSPRBHB6C7S6LWYYC\" width=\"100%\"></th>\n",
-    "        <th><img src=\"https://raw.githubusercontent.com/HazyResearch/flyingsquid/master/figs/tennis_nonrally.png?token=ABDDIIRQ5Y3R4F7J7YGKF6K6LWYYG\" width=\"100%\"></th>\n",
+    "        <th><img src=\"https://raw.githubusercontent.com/HazyResearch/flyingsquid/master/figs/tennis_rally.png\" width=\"100%\"></th>\n",
+    "        <th><img src=\"https://raw.githubusercontent.com/HazyResearch/flyingsquid/master/figs/tennis_nonrally.png\" width=\"100%\"></th>\n",
     "    </tr>\n",
     "    <tr style=\"font-weight: bold; font-size:large; background:none\">\n",
     "        <td style=\"text-align: center\">Rally Segment</td>\n",
@@ -129,7 +129,7 @@
     "We'll model three frames at a time with three hidden variables, and model each labeling function labeling an individual frame in the sequence:\n",
     "\n",
     "<div>\n",
-    "  <img src=\"https://raw.githubusercontent.com/HazyResearch/flyingsquid/master/figs/graphical_structure_video.png?token=ABDDIIQ2ARBNMNYZ4TYW35S6L2L5M\" style=\"padding: 20px 30px\" width = '800px'>\n",
+    "  <img src=\"https://raw.githubusercontent.com/HazyResearch/flyingsquid/master/figs/graphical_structure_video.png\" style=\"padding: 20px 30px\" width = '800px'>\n",
     "</div>\n",
     "\n",
     "In a given sequence of three frames, `lambda_0`, `lambda_6`, and `lambda_12` model LF 0's outputs on the first, second, and third frames, respectively. Similarly, `lambda_1`, `lambda_7`, and `lambda_13` model LF 1's outputs on the first, second, and third frames.\n",
@@ -372,7 +372,7 @@
     "Now that we know how to specify dependencies manually, it's a simple step to specify dependencies between labeling functions:\n",
     "\n",
     "<div>\n",
-    "  <img src=\"https://raw.githubusercontent.com/HazyResearch/flyingsquid/master/figs/graphical_structure_video_lambda_dep.png?token=ABDDIIUD6X2IGX6N7GO2TI26L2OXM\" style=\"padding: 20px 30px\" width = '800px'>\n",
+    "  <img src=\"https://raw.githubusercontent.com/HazyResearch/flyingsquid/master/figs/graphical_structure_video_lambda_dep.png\" style=\"padding: 20px 30px\" width = '800px'>\n",
     "</div>\n",
     "\n",
     "All you have to do is pass in an extra argument, `lambda_edges`, that specifies edges between observable variables. For example, you can specify the above graph like this:"
