--- a/examples/tutorials/Basics.ipynb
+++ b/examples/tutorials/Basics.ipynb
@@ -78,11 +78,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LF 0: Accuracy 96%, Abstain rate 78%\n",
-      "LF 1: Accuracy 90%, Abstain rate 87%\n",
-      "LF 2: Accuracy 58%, Abstain rate 30%\n",
-      "LF 3: Accuracy 57%, Abstain rate 37%\n",
-      "LF 4: Accuracy 54%, Abstain rate 48%\n"
+      "LF 0: Accuracy 93%, Abstain rate 78%\n",
+      "LF 1: Accuracy 63%, Abstain rate 87%\n",
+      "LF 2: Accuracy 62%, Abstain rate 30%\n",
+      "LF 3: Accuracy 59%, Abstain rate 37%\n",
+      "LF 4: Accuracy 46%, Abstain rate 48%\n"
      ]
     }
    ],
@@ -106,15 +106,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.  0.  1. -1. -1.]\n",
-      " [ 0.  0. -1.  1. -1.]\n",
-      " [ 0.  0.  1.  1.  0.]\n",
+      "[[ 0.  0. -1.  1.  1.]\n",
+      " [ 0.  0. -1.  1.  1.]\n",
+      " [ 0.  0. -1. -1.  0.]\n",
       " [ 0.  0. -1. -1. -1.]\n",
       " [ 0.  0. -1.  0.  0.]\n",
       " [ 0.  0.  1.  1.  0.]\n",
-      " [ 0.  0.  1. -1.  0.]\n",
-      " [ 0.  0.  1.  0.  0.]\n",
-      " [-1.  0.  0.  1. -1.]\n",
+      " [ 0.  0.  1.  1.  0.]\n",
+      " [ 0.  0. -1.  0.  0.]\n",
+      " [-1.  0.  0.  1.  1.]\n",
       " [ 0.  0.  1. -1.  0.]]\n"
      ]
     }
@@ -132,7 +132,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 1. -1. -1. -1. -1.  1.  1. -1. -1.  1.]\n"
+      "[ 1. -1. -1. -1. -1.  1. -1. -1. -1.  1.]\n"
      ]
     }
    ],
@@ -211,7 +211,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Label model accuracy: 69%\n"
+      "Label model accuracy: 70%\n"
      ]
     }
    ],
@@ -226,7 +226,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can see that this performs much better than majority vote:"
+    "We can see that this performs better than majority vote:"
    ]
   },
   {
@@ -238,12 +238,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Majority vote accuracy: 25%\n"
+      "Majority vote accuracy: 65%\n"
      ]
     }
    ],
    "source": [
-    "majority_vote_preds = np.sum(L_dev, axis=1) > 0\n",
+    "majority_vote_preds = np.array([1 if pred > 0 else -1 for pred in np.sum(L_dev, axis=1)])\n",
     "majority_vote_accuracy = np.sum(majority_vote_preds == Y_dev) / Y_dev.shape[0]\n",
     "\n",
     "print('Majority vote accuracy: {}%'.format(int(100 * majority_vote_accuracy)))"
@@ -268,8 +268,8 @@
      "output_type": "stream",
      "text": [
       "(10000,)\n",
-      "[0.37917828 0.96076065 0.26749207 0.64892955 0.08486538 0.48144335\n",
-      " 0.73727254 0.62277643 0.73727254 0.6031905 ]\n"
+      "[0.46439535 0.89805256 0.72736331 0.48237588 0.2962007  0.2633458\n",
+      " 0.66693893 0.53600092 0.72736331 0.3213108 ]\n"
      ]
     }
    ],
@@ -289,7 +289,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:flyingsquid] *",
+   "display_name": "Python [conda env:flyingsquid]",
    "language": "python",
    "name": "conda-env-flyingsquid-py"
   },
