--- a/examples/tutorials/Video.ipynb
+++ b/examples/tutorials/Video.ipynb
@@ -288,40 +288,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Again, we can see that this performs much better than majority vote:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Majority vote accuracy: 33%\n"
-     ]
-    }
-   ],
-   "source": [
-    "majority_vote_preds = np.sum(L_dev, axis=1) > 0\n",
-    "majority_vote_accuracy = np.sum(majority_vote_preds == Y_dev) / Y_dev.shape[0]\n",
-    "\n",
-    "print('Majority vote accuracy: {}%'.format(int(100 * majority_vote_accuracy)))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Step 3: Training an End Model\n",
     "If necessary, we can use the probabilistic labels to train up an end model. All we need to do is call `predict_proba_marginalized` over `L_train_seqs`:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,7 +370,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:flyingsquid] *",
+   "display_name": "Python [conda env:flyingsquid]",
    "language": "python",
    "name": "conda-env-flyingsquid-py"
   },
